[package]
name = "peter-engine"
version = "0.1.0"
edition = "2021"

[dependencies]
eframe = { git = "https://github.com/emilk/egui", branch = "master", default-features = false, features = [
    "default_fonts",
    "wgpu",
] }
winit = { version = "0.28.6" }
wgpu = { version = "0.17.0", features = [ "webgl" ] }
nalgebra = "0.32.3"

[target.'cfg(target_arch = "wasm32")'.dependencies]
wasm-bindgen = "0.2.86"
wasm-bindgen-futures = "0.4.36"
js-sys = "0.3.63"
web-sys = { version = "0.3.63", features = [
    "Document",
    "Window",
    "Element",
] }
getrandom = { version = "0.2.10", features = [ "js" ] }

