[package]
name = "peter-engine"
version = "0.1.0"
edition = "2021"

[dependencies]
nalgebra = "0.32.3"
enum-map = "2.7.1"
anymap = "0.12.1"
image = "0.24.7"
eframe = { version = "0.23.0", default-features = false, features = [
    "default_fonts",
    "wgpu",
] }
winit = "0.29.3"
wgpu = { version = "0.18.0", features = [ "webgl" ] }

[target.'cfg(target_arch = "wasm32")'.dependencies]
wasm-bindgen = "0.2.86"
wasm-bindgen-futures = "0.4.36"
js-sys = "0.3.63"
web-sys = { version = "0.3.63", features = [
    "Document",
    "Window",
    "Element",
] }
getrandom = { version = "0.2.10", features = [ "js" ] }

