[package]
name = "peter-engine"
version = "0.1.2"
edition = "2021"
description = "A game engine I (Peter Schmidt-Nielsen) am writing for myself -- I don't recommend you use it"
license = "CC0-1.0"

[dependencies]
nalgebra = "0.32.3"
image = "0.24.7"
eframe = { version = "0.23.0", default-features = false, features = [
    "default_fonts",
    "wgpu",
] }
winit = "0.28.7"
wgpu = { version = "0.17.1", features = [ "webgl", "fragile-send-sync-non-atomic-wasm" ] }

[target.'cfg(target_arch = "wasm32")'.dependencies]
wasm-bindgen = "0.2.86"
wasm-bindgen-futures = "0.4.36"
js-sys = "0.3.63"
web-sys = { version = "0.3.63", features = [
    "Document",
    "Window",
    "Element",
] }
getrandom = { version = "0.2.10", features = [ "js" ] }
